--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@supabase/supabase-js": "^2.48.0",
     "@tanstack/react-query": "^5.90.20",
+    "base64-arraybuffer": "^1.0.2",
     "clsx": "^2.1.1",
     "expo": "~54.0.32",
     "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.13",
+    "expo-file-system": "^19.0.21",
     "expo-haptics": "^15.0.8",
+    "expo-image-picker": "^17.0.10",
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.22",
