--- a/supabase/functions/deno.json
+++ b/supabase/functions/deno.json
@@ -1,13 +1,7 @@
 {
-  "compilerOptions": {
-    "lib": ["deno.ns", "deno.window"],
-    "strict": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "react"
-  },
-  "lint": {
-    "rules": {
-      "exclude": ["no-explicit-any"]
-    }
+  "imports": {
+    "@supabase/supabase-js": "jsr:@supabase/supabase-js@2",
+    "@google/generative-ai": "https://esm.sh/@google/generative-ai@0.1.3",
+    "std/": "https://deno.land/std@0.224.0/"
   }
 }
