--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "supabase:edge": "supabase functions serve --no-verify-jwt"
   },
   "dependencies": {
+    "@google/genai": "^1.38.0",
     "@google/generative-ai": "^0.21.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@supabase/supabase-js": "^2.48.0",
@@ -27,6 +28,7 @@
     "clsx": "^2.1.1",
     "expo": "~54.0.32",
     "expo-blur": "~15.0.8",
+    "expo-clipboard": "^8.0.8",
     "expo-constants": "~18.0.13",
     "expo-file-system": "^19.0.21",
     "expo-haptics": "^15.0.8",
@@ -45,6 +47,8 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-get-random-values": "^2.0.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
