--- a/supabase/functions/deno.json
+++ b/supabase/functions/deno.json
@@ -1,7 +1,8 @@
 {
   "imports": {
+    "@google/genai": "npm:@google/genai@^1.38.0",
+    "@google/generative-ai": "npm:@google/generative-ai@^0.24.1",
     "@supabase/supabase-js": "jsr:@supabase/supabase-js@2",
-    "@google/generative-ai": "https://esm.sh/@google/generative-ai@0.1.3",
     "std/": "https://deno.land/std@0.224.0/"
   }
 }
