--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "supabase:edge": "supabase functions serve --no-verify-jwt"
   },
   "dependencies": {
+    "@danielsaraldi/react-native-blur-view": "^1.3.1",
     "@google/genai": "^1.38.0",
     "@google/generative-ai": "^0.21.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -26,6 +27,7 @@
     "@tanstack/react-query": "^5.90.20",
     "base64-arraybuffer": "^1.0.2",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "expo": "~54.0.32",
     "expo-blur": "~15.0.8",
     "expo-clipboard": "^8.0.8",
@@ -46,8 +48,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-crypto-js": "^1.0.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-get-random-values": "^2.0.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
@@ -61,6 +64,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "~19.1.10",
     "@types/react-native": "^0.72.8",
     "eslint": "^9.0.0",
