chore(deps): update react-navigation and supabase packages
- Update @react-navigation/native-stack from 7.10.1 to 7.11.0
- Update @supabase/auth-js from 2.91.1 to 2.93.1
- Update @supabase/functions-js from 2.91.1 to 2.93.1
- Update @supabase/postgrest-js from 2.91.1 to 2.93.1
- Update @supabase/realtime-js from 2.91.1 to 2.93.1
- Update @supabase/storage-js from 2.91.1 to 2.93.1
- Update @supabase/supabase-js from 2.91.1 to 2.93.1

These updates include bug fixes, performance improvements, and new features.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ESNext"
+    ],
     "allowJs": true,
     "jsx": "react-jsx",
     "noEmit": true,
@@ -12,11 +16,17 @@
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "paths": {
-      "@/*": ["./*"]
+      "@/*": [
+        "./*"
+      ]
     },
     "skipLibCheck": true
   },
-  "exclude": ["node_modules", ".expo", "supabase/functions"],
+  "exclude": [
+    "node_modules",
+    ".expo",
+    "supabase/functions"
+  ],
   "include": [
     "**/*.ts",
     "**/*.tsx",
