--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
+    "supabase": "^2.72.9",
     "tailwindcss": "^3.4.1",
     "zod": "^3.24.0"
   },
