--- a/app.json
+++ b/app.json
@@ -15,9 +15,20 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router"
+    ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "b33ecfca-1890-43c0-9264-f40a91571f60"
+      }
+    },
+    "android": {
+      "package": "com.alexbuildslts.SkillSprint"
     }
   }
 }
