--- a/app.json
+++ b/app.json
@@ -7,29 +7,46 @@
     "icon": "./assets/images/icon.png",
     "userInterfaceStyle": "dark",
     "newArchEnabled": true,
-    "ios": {
-      "supportsTablet": true
+    
+    "splash": {
+      "image": "./assets/images/splash-icon.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#020617"
     },
+
+    "ios": {
+      "supportsTablet": true,
+      "bundleIdentifier": "com.alexbuildslts.SkillSprint"
+    },
+    
+    "android": {
+      "package": "com.alexbuildslts.SkillSprint",
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "backgroundColor": "#020617"
+      }
+    },
+
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
+
     "plugins": [
       "expo-router",
       "expo-secure-store"
     ],
+
     "experiments": {
       "typedRoutes": true
     },
+
     "extra": {
       "router": {},
       "eas": {
         "projectId": "b33ecfca-1890-43c0-9264-f40a91571f60"
       }
-    },
-    "android": {
-      "package": "com.alexbuildslts.SkillSprint"
     }
   }
 }
