feat(ai-chat,settings): improve AI neural interface and biometric security
Refactor the AI chat module to version 11.5 to address UI/UX issues and improve system stability. This update fixes tab bar obstruction with dynamic padding, enhances visual clarity with new identity icons and high-contrast message bubbles, and adds a BlurView fallback for Android stability.

Additionally, the biometric security screen was refactored for better error handling and hardware status checks. VS Code workspace settings were also updated to include new PostgreSQL connection configurations and project-specific dictionary words.

Key changes:
- Added dynamic bottom padding to chat input to prevent tab bar overlap
- Updated message bubbles with improved contrast and distinct icons
- Implemented Android-safe BlurView logic
- Refined biometric enrollment and hardware check logic
- Updated workspace settings for better developer experience

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,8 @@
     "apikey",
     "browserless",
     "nativewind",
-    "reanimated"
+    "reanimated",
+    "alexbuildslts"
   ],
   "chat.useAgentSkills": true,
   "inlineChat.finishOnType": true,
