FIXED: Removed BlurView for Android stability and standard View + darker background

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,17 +5,26 @@
   "deno.enablePaths": ["supabase/functions"],
   "deno.importMap": "supabase/functions/deno.json",
   "cSpell.words": [
+    "alexbuildslts",
+    "apikey",
     "bento",
     "Bento",
-    "springify",
-    "Postgrest",
-    "fkey",
-    "supabase",
-    "apikey",
     "browserless",
+    "cout",
+    "Cupertino",
+    "ellipsize",
+    "fkey",
+    "Glassmorphism",
+    "interp",
+    "javac",
     "nativewind",
+    "Postgrest",
     "reanimated",
-    "alexbuildslts"
+    "Rscript",
+    "SKILLSPRINT",
+    "springify",
+    "Subviews",
+    "supabase"
   ],
   "chat.useAgentSkills": true,
   "inlineChat.finishOnType": true,
